--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -12,6 +12,8 @@ services:
         VARIANT: 16-buster
     volumes:
       - ..:/workspace:cached
+    # ports:
+    #   - "4200:4200"
 
     # Overrides default command so things don't shut down after the process ends.
     command: sleep infinity
